--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -3,5 +3,10 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "hardhat": "^2.3.0"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.3.0"
   }
 }
